--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
+        "laravel/dusk": "1.1.*",
         "phpunit/phpunit": "~5.7"
     },
     "autoload": {
