--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
+        "laravel/browser-kit-testing": "^2.0",
         "laravel/dusk": "1.1.*",
-        "phpunit/phpunit": "~5.7"
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~5.7",
+        "symfony/dom-crawler": "^3.3"
     },
     "autoload": {
         "classmap": [
